# air-quality-airflow

./: .cache.sqlite  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh  upload_model.py
.astro/: config.yaml
config/: models.py  paths.py  urls.py
dags/: historical_download_data.py  inference_data.py  ingestion_data.py  retraining_models.py  transform_data.py
dashboard/: Dockerfile  app.py  docker-compose.yml  requirements.txt
include/: transform_data.py
include/config/: models.py  paths.py  urls.py
include/src/: download_data.py  download_models.py  inference_data.py  transform_data.py
src/: download_data.py  inference_data.py  main.py  preyba.py  test_train.py  test_train_v4.py  test_train_v5.py  transform_data.py  utils.py
src/DownloadData/: DownloadDataFileAirQuality.py  DownloadDataFileMeteo.py  DownloadDataFileTraffic.py
src/client/: client.py
tests/: test_transform.py
tests/dags/: test_dags.py  test_download.py
